# docs/api/openapi.yaml
@@ -32,7 +32,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PortalVariables'
+                $ref: '#/components/schemas/RepoVariables'
 
   /patch:
     post:
@@ -59,7 +59,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PortalVariables'
+              $ref: '#/components/schemas/RepoVariables'
       responses:
         '200':
           description: Preview updated
@@ -81,7 +81,7 @@ components:
       bearerFormat: JWT
 
   schemas:
-    PortalVariables:
+    RepoVariables:
       type: object
       properties:
         string:
